# photogrammetry

./: .gitignore  out.txt
app/: build.gradle
app/src/androidTest/java/com/example/phonogrammetry/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  native-lib.cpp  scratch.cpp
app/src/main/java/com/example/phonogrammetry/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/phonogrammetry/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
